# agent-mcp

./: .gitignore  DEMO_RUNBOOK.md  GEMMA_REACT_DESIGN.md  LICENSE  PLANNER_HARDWARE_TIERS.md  PRIMARY_VS_BETA_2026-05-21.md  PRIMARY_VS_BETA_2026-05-27.md  PRIMARY_VS_BETA_2026-05-28.md  README.md  bootstrap.ps1  bootstrap.sh  gemma_agent.py  gemma_agent_v2.py  hybrid_agent.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: aircraft_combined.yaml  aircraft_design.yaml  aircraft_multimodal.yaml  gemma4_e4b_2026-05-21.json  gemma4_e4b_multimodal_2026-05-27.json  gemma4_e4b_multimodal_2026-05-28.json  hybrid_combined_2026-05-27.json  hybrid_combined_2026-05-28.json  qwen2_5_7b_2026-05-21.json  qwen2_5_7b_combined_2026-05-27.json  qwen2_5_7b_multimodal_2026-05-27.json  qwen2_5_7b_multimodal_2026-05-28.json
scripts/: make_slide_visuals.py  render_aircraft_views.py  vtu_to_gemma.py
skills/: SKILL_ADAPTIVE_MESH.md  SKILL_AOA_SWEEP.md  SKILL_CRUISE_MATCH.md  SKILL_ENGINE_RESIZE.md  SKILL_OPEN_ENDED_MESH.md
